--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active bg-info border  ">
+                <div class="carousel-item active bg-info border rounded-4 shadow-lg p-3 mb-5  rounded">
                     <div class="row p-5 d-flex align-items-center " style="height: 500px;">
                         <div class="col-lg-7 mt-5">
                             <h2>Cool Dude Headphone</h2>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item active bg-danger-subtle   ">
+                <div class="carousel-item active bg-danger-subtle border rounded-4 shadow-lg p-3 mb-5  rounded ">
                     <div class="row p-5 d-flex align-items-center " style="height: 500px;">
                         <div class="col-lg-7 mt-5">
                             <h2>Smart TV</h2>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item active bg-info border  ">
+                <div class="carousel-item active bg-info border border rounded-4 shadow-lg p-3 mb-5  rounded">
                     <div class="row p-5 d-flex align-items-center " style="height: 500px;">
                         <div class="col-lg-7 mt-5">
                             <h2>Cool Dude Headphone</h2>
@@ -123,6 +123,26 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+    </section>
+    <!-- catagory -->
+    <!-- catagory -->
+    <!-- catagory -->
+    <section>
+        <div class="container overflow-hidden text-center">
+            <div class="row gy-5">
+              <div class="col-lg-4 col-md-6 col-sm-12 " style="height: 200px;" >
+                <div class="p-1 d-flex align-items-center bg-warning border rounded-4"  >
+                    <h3 class="p-5">watches</h3> <img class="ms-5" src="images/categories/watch.png" alt=""></div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 " style="height: 120px;">
+                <div class="p-3 d-flex align-items-center bg-danger bg-gradient border rounded-4"><h3 class="ms-5">BAGS</h3> <img class="ms-5" src="images/categories/bag.png" alt=""></div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 ">
+                <div class="p-3 d-flex align-items-center bg-primary bg-gradient border rounded-4 "><h3 class="ms-5">BAGS</h3> <img class="ms-5" src="images/categories/shoes.png" alt=""></div>
+              </div>
+              
+            </div>
+          </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
