--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <label for="exampleFormControlInput1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
       </div>
-      <button class="bg-danger bg-gradient ms-3" style="width: 168px; height: 40px;">submit</button>
+      <button class="bg-danger bg-gradient ms-3" style="width: 168px; height: 40px;">submitt</button>
     </div>
 </div>
 </footer>
